Fix v21 compiler warning